fix(yalb-1478): update align-items for directory-listing card collections

--- a/components/03-organisms/card-collection/_yds-card-collection.scss
+++ b/components/03-organisms/card-collection/_yds-card-collection.scss
@@ -31,6 +31,10 @@
     align-items: flex-start;
   }
 
+  [data-collection-type='profile-directory'] & {
+    align-items: flex-start;
+  }
+
   [data-collection-type='grid'][data-collection-featured='true'] & {
     @include grid.primary;
   }
